--- a/_config.yml
+++ b/_config.yml
@@ -20,5 +20,5 @@ author:
   name:              Matt Newman
   url:               http://mdjnewman.me
 
-# Excludes
 exclude: [".editorconfig", ".gitignore", "CNAME", "Gemfile", "Gemfile.lock", "README.md"]
+include: [".well-known/keybase.txt"]
