Updating path for explicit keybase.txt include

--- a/_config.yml
+++ b/_config.yml
@@ -21,4 +21,4 @@ author:
   url:               http://mdjnewman.me
 
 exclude: [".editorconfig", ".gitignore", "CNAME", "Gemfile", "Gemfile.lock", "README.md"]
-include: [".well-known/keybase.txt"]
+include: [".well-known"]
