--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ highlighter:         pygments
 # Permalinks
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
-permalink:           pretty
+permalink:           /:year/:month/:title/
 relative_permalinks: true
 
 # Setup
@@ -25,4 +25,5 @@ include: [".well-known"]
 
 gems:
   - jekyll-sitemap
+  - jekyll-redirect-from
 
