Changing baseurl to remove trailing slash
* See http://jekyllrb.com/docs/github-pages/#project-page-url-structure
  and https://byparker.com/blog/2014/clearing-up-confusion-around-baseurl/

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ relative_permalinks: true
 title:               Matt Newman
 tagline:             ''
 description:         'Personal website & blog for a developer living in Brisbane, Australia.'
-baseurl:             /
+baseurl:             ''
 paginate:            5
 
 # About/contact
