--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author:
 exclude: [".editorconfig", ".gitignore", "CNAME", "Gemfile", "Gemfile.lock", "README.md"]
 include: [".well-known"]
 
-gems:
+plugins:
   - jekyll-sitemap
   - jekyll-redirect-from
   - jekyll-paginate
